k8/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookstore-api
spec:
  selector:
    app: bookstore-api
  ports:
    - port: 5000
      targetPort: 5000
