k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: bookstore.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bookstore-api
            port:
              number: 5000
